@@ -1,0 +1,2 @@
+Style2;POLYGON((150 50,150 150,50 50,42.9289321881345 57.0710678118655,142.928932188135 157.071067811865,144.444297669804 158.314696123025,146.173165676349 159.238795325113,148.049096779839 159.807852804032,150 160,151.950903220161 159.807852804032,153.826834323651 159.238795325113,155.555702330196 158.314696123025,157.071067811865 157.071067811865,158.314696123025 155.555702330196,159.238795325113 153.826834323651,159.807852804032 151.950903220161,160 150,160 50,150 50))
+Style1-thinline;LINESTRING(50 50,150 150,150 50)
