@@ -1,0 +1,2 @@
+Style2;POLYGON((50 50,150 150,150 50,140 50,140 125.857864376269,57.0710678118655 42.9289321881345,50 50))
+Style1-thinline;LINESTRING(50 50,150 150,150 50)
