@@ -1,0 +1,2 @@
+Style2;POLYGON((150 50,150 150,50 50,42.9289321881345 57.0710678118655,160 174.142135623731,160 50,150 50))
+Style1-thinline;LINESTRING(50 50,150 150,150 50)
