@@ -1,0 +1,2 @@
+Style2;POLYGON((50 50,30 50,30 170,170 170,170 30,50 30,50 50),(50 50,150 50,150 150,50 150,50 50))
+Style1-thinline;LINESTRING(50 50, 50 150, 150 150, 150 50, 50 50)
