@@ -1,0 +1,2 @@
+Style2;POLYGON((50 50,50 70,50 150,150 150,150 50,70 50,50 50),(70 70,130 70,130 130,70 130,70 70))
+Style1-thinline;LINESTRING(50 50, 50 150, 150 150, 150 50, 50 50)
