@@ -88,6 +88,10 @@ The optional third parameter (currently only applies to geometry) can either spe
 <listitem>
 <para>'mitre_limit=#.#' : mitre ratio limit (only affects mitered join style). 'miter_limit' is also accepted as a synonym for 'mitre_limit'.</para>
 </listitem>
+<listitem>
+<para>'side=both|left|right' : 'left' or 'right' performs a single-sided buffer on the geometry, with the buffered side relative to the direction of the line.
+This is only really relevant to LINESTRING geometry and does not affect POINT or POLYGON geometries. By default end caps are square.</para>
+</listitem>
 </itemizedlist>
 				</para>
 
@@ -238,6 +242,91 @@ SELECT ST_Buffer(
 				</programlisting>
 						  </para></entry>
 					  </row>
+						<row>
+						<entry><para><informalfigure>
+							<mediaobject>
+							  <imageobject>
+								<imagedata fileref="images/st_buffer09.png" />
+							  </imageobject>
+							  <caption><para>side=left</para></caption>
+							</mediaobject>
+						  </informalfigure>
+				<programlisting>
+SELECT ST_Buffer(
+ ST_GeomFromText(
+  'LINESTRING(50 50,150 150,150 50)'
+ ), 10, 'side=left');
+				</programlisting>
+						  </para></entry>
+
+						<entry><para><informalfigure>
+							<mediaobject>
+							  <imageobject>
+								<imagedata fileref="images/st_buffer10.png" />
+							  </imageobject>
+							  <caption><para>side=right</para></caption>
+							</mediaobject>
+						  </informalfigure>
+				<programlisting>
+SELECT ST_Buffer(
+ ST_GeomFromText(
+  'LINESTRING(50 50,150 150,150 50)'
+ ), 10, 'side=right');
+				</programlisting>
+						  </para></entry>
+
+						<entry><para><informalfigure>
+							<mediaobject>
+							  <imageobject>
+								<imagedata fileref="images/st_buffer11.png" />
+							  </imageobject>
+							  <caption><para>side=left join=mitre</para></caption>
+							</mediaobject>
+						  </informalfigure>
+				<programlisting>
+SELECT ST_Buffer(
+ ST_GeomFromText(
+  'LINESTRING(50 50,150 150,150 50)'
+ ), 10, 'side=left join=mitre');
+				</programlisting>
+						  </para></entry>
+					  </row>
+						<row>
+						<entry><para><informalfigure>
+							<mediaobject>
+							  <imageobject>
+								<imagedata fileref="images/st_buffer12.png" />
+							  </imageobject>
+							  <caption><para>right-hand-winding, polygon boundary side=left</para></caption>
+							</mediaobject>
+						  </informalfigure>
+				<programlisting>
+SELECT ST_Buffer(
+ST_ForceRHR(
+ST_Boundary(
+ ST_GeomFromText(
+'POLYGON ((50 50, 50 150, 150 150, 150 50, 50 50))'))),
+ ), 20, 'side=left');
+				</programlisting>
+						  </para></entry>
+						<entry><para><informalfigure>
+							<mediaobject>
+							  <imageobject>
+								<imagedata fileref="images/st_buffer13.png" />
+							  </imageobject>
+							  <caption><para>right-hand-winding, polygon boundary side=right</para></caption>
+							</mediaobject>
+						  </informalfigure>
+				<programlisting>
+SELECT ST_Buffer(
+ST_ForceRHR(
+ST_Boundary(
+ ST_GeomFromText(
+'POLYGON ((50 50, 50 150, 150 150, 150 50, 50 50))'))
+), 20,'side=right')
+				</programlisting>
+				</para></entry>
+				</row>
 					</tbody>
 				  </tgroup>
 			</informaltable>
