@@ -811,10 +811,12 @@ Datum buffer(PG_FUNCTION_ARGS)
 {
 	GSERIALIZED	*geom1;
 	double	size;
-	GEOSGeometry *g1, *g3;
+	GEOSBufferParams *bufferparams;
+	GEOSGeometry *g1, *g3 = NULL;
 	GSERIALIZED *result;
 	int quadsegs = 8; /* the default */
 	int nargs;
+	int singleside = 0; /* the default */
 	enum
 	{
 	    ENDCAP_ROUND = 1,
@@ -950,12 +952,37 @@ Datum buffer(PG_FUNCTION_ARGS)
 				/* quadrant segments is an int */
 				quadsegs = atoi(val);
 			}
+			else if ( !strcmp(key, "side") ||
+					  !strcmp(key, "side") )
+			{
+				if ( !strcmp(val, "both") )
+				{
+					singleside = 0;
+				}
+				else if ( !strcmp(val, "left") )
+				{
+					singleside = 1;
+				}
+				else if ( !strcmp(val, "right") )
+				{
+					singleside = 1;
+					size *= -1;
+				}
+				else
+				{
+					lwpgerror("Invalid side "
+					        "parameter: %s (accept: "
+					        "'right', 'left', 'both' "
+					        ")", val);
+					break;
+				}
+			}
 			else
 			{
 				lwpgerror("Invalid buffer parameter: %s (accept: "
 				        "'endcap', 'join', 'mitre_limit', "
-				        "'miter_limit and "
-				        "'quad_segs')", key);
+				        "'miter_limit', 'quad_segs' and "
+				        "'side')", key);
 				break;
 			}
 		}
@@ -967,7 +994,28 @@ Datum buffer(PG_FUNCTION_ARGS)
 
 	}
 
-	g3 = GEOSBufferWithStyle(g1, size, quadsegs, endCapStyle, joinStyle, mitreLimit);
+	bufferparams = GEOSBufferParams_create();
+	if (bufferparams)
+	{
+		if (GEOSBufferParams_setEndCapStyle(bufferparams, endCapStyle) &&
+			GEOSBufferParams_setJoinStyle(bufferparams, joinStyle) &&
+			GEOSBufferParams_setMitreLimit(bufferparams, mitreLimit) &&
+			GEOSBufferParams_setQuadrantSegments(bufferparams, quadsegs) &&
+			GEOSBufferParams_setSingleSided(bufferparams, singleside))
+		{
+			g3 = GEOSBufferWithParams(g1, bufferparams, size);
+		}
+		else
+		{
+			lwpgerror("Error setting buffer parameters.");
+		}
+		GEOSBufferParams_destroy(bufferparams);
+	}
+	else
+	{
+		lwpgerror("Error setting buffer parameters.");
+	}
+
 	GEOSGeom_destroy(g1);
 
 	if (!g3) HANDLE_GEOS_ERROR("GEOSBuffer");
