@@ -3,8 +3,13 @@ line quadsegs=2|POLYGON((10 2,11.414214 1.414214,12 0,11.414214 -1.414214,10 -2,
 line quadsegs=2 endcap=flat|POLYGON((10 2,10 -2,0 -2,0 2,10 2))
 line quadsegs=2 endcap=butt|POLYGON((10 2,10 -2,0 -2,0 2,10 2))
 line quadsegs=2 endcap=square|POLYGON((10 2,12 2,12 -2,0 -2,-2 -2,-2 2,10 2))
+line join=mitre mitre_limit=1.0 side=both|POLYGON((148.123573 161.601164,159.530096 156.876427,160 50,159.807853 48.049097,159.238795 46.173166,158.314696 44.444298,157.071068 42.928932,155.555702 41.685304,153.826834 40.761205,151.950903 40.192147,150 40,148.049097 40.192147,146.173166 40.761205,144.444298 41.685304,142.928932 42.928932,141.685304 44.444298,140.761205 46.173166,140.192147 48.049097,140 50,140 125.857864,57.071068 42.928932,55.555702 41.685304,53.826834 40.761205,51.950903 40.192147,50 40,48.049097 40.192147,46.173166 40.761205,44.444298 41.685304,42.928932 42.928932,41.685304 44.444298,40.761205 46.173166,40.192147 48.049097,40 50,40.192147 51.950903,40.761205 53.826834,41.685304 55.555702,42.928932 57.071068,148.123573 161.601164))
+line side=left|POLYGON((150 50,150 150,50 50,42.928932 57.071068,142.928932 157.071068,144.444298 158.314696,146.173166 159.238795,148.049097 159.807853,150 160,151.950903 159.807853,153.826834 159.238795,155.555702 158.314696,157.071068 157.071068,158.314696 155.555702,159.238795 153.826834,159.807853 151.950903,160 150,160 50,150 50))
+line side=right|POLYGON((50 50,150 150,150 50,140 50,140 125.857864,57.071068 42.928932,50 50))
+line side=left join=mitre|POLYGON((150 50,150 150,50 50,42.928932 57.071068,160 174.142136,160 50,150 50))
 poly quadsegs=2 join=round|POLYGON((-2 0,-2 10,-1.414214 11.414214,0 12,10 12,11.414214 11.414214,12 10,12 0,11.414214 -1.414214,10 -2,0 -2,-1.414214 -1.414214,-2 0))
 poly quadsegs=2 join=bevel|POLYGON((-2 0,-2 10,0 12,10 12,12 10,12 0,10 -2,0 -2,-2 0))
 poly quadsegs=2 join=mitre|POLYGON((-2 -2,-2 12,12 12,12 -2,-2 -2))
 poly quadsegs=2 join=mitre mitre_limit=1|POLYGON((-1.828427 -1,-1.828427 11,-1 11.828427,11 11.828427,11.828427 11,11.828427 -1,11 -1.828427,-1 -1.828427,-1.828427 -1))
 poly quadsegs=2 join=miter miter_limit=1|POLYGON((-1.828427 -1,-1.828427 11,-1 11.828427,11 11.828427,11.828427 11,11.828427 -1,11 -1.828427,-1 -1.828427,-1.828427 -1))
+poly boundary rhr side=left|POLYGON((20 20,10 20,10 50,50 50,50 10,20 10,20 20),(20 20,40 20,40 40,20 40,20 20))
